Changes For EC2 dev testing
